--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,152 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Course Project 1 (Reproducible Research)"
+author: "Naeem"
+date: "10/31/2020"
+output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Loading and preprocessing the data
+# Reproducible Research : Course Project 1 
 
+## Loading and preprocessing the data 
 
+Show any code that is needed to 
 
-## What is mean total number of steps taken per day?
+1. Load the data(i.e read.csv())
+  
+``` {r}
+if(!file.exists("getdata-projectfiles-UCI HAR Dataset.zip")) {
+        temp <- tempfile()
+        download.file("http://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip",temp)
+        unzip(temp)
+        unlink(temp)
+}
 
+data <-read.csv("activity.csv")
+head(data)
+```
 
+2. Process/transform the data (if necessary) into a format suitable for your analysis 
+  
+No transformation of variables needed, the data is good to go. 
 
-## What is the average daily activity pattern?
+## What is the mean total number of steps taken per day? 
 
+For this part of the assignment, you can ignore the missing values in the dataset. 
 
+1. Calculate the number of steps taken per day. 
+  
+``` {r}
+dailytotalsteps <- aggregate(steps ~ date, data, sum)
+head(dailytotalsteps)
+```
 
-## Imputing missing values
+2. If you do not understand the difference between a histogram and a barplot, research the difference between them. Make a histogram of the total number of steps taken each day.
+  
+``` {r}
+hist(dailytotalsteps$steps, xlab = "Class of Total Number of Steps per Day", ylab = "Number of Days", main = "Total Number of Steps Taken Each Day")
+```
 
+3. Calculate and report the mean and median of the total number of steps taken per day.
+  
+``` {r}
+raw_mean <- mean(dailytotalsteps$steps)
+raw_median <- median(dailytotalsteps$steps)
+raw_mean
+raw_median 
+```
 
+The mean number of steps taken per day is 10766.19 and the median number of steps taken per day is 10765.
 
-## Are there differences in activity patterns between weekdays and weekends?
+## What is the average daily pattern? 
+
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis). 
+
+``` {r}
+averagestepsbyinterval <- aggregate(steps ~ interval, data, mean)
+with(averagestepsbyinterval, plot(interval ,steps, type = "l", xlab = "Number of Steps", ylab = "Daily Average Steps Per 5 Min Interval"))
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+``` {r}
+averagestepsbyinterval[which.max(averagestepsbyinterval[, 2]),1]
+```
+
+## Imputing missing values 
+
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+``` {r}
+missingIndex <- is.na(data[, 1])
+sum(missingIndex)
+```
+
+There are a total of 2304 missing values in the dataset. 
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+To fill in the missing values of the dataset, I have decided to use the mean number of steps per interval to replace all the NA values. First, we have to find the mean number of steps per interval. 
+
+``` {r}
+m <- mean(averagestepsbyinterval$steps)
+m
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in. 
+
+Imputing missing values with m = 37.3826
+
+``` {r}
+data1 <- data
+data1[missingIndex, 1] <- m 
+head(data1)
+```
+
+4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+``` {r}
+totalstepsbyday1 <- aggregate(steps ~ date, data1, sum)
+hist(totalstepsbyday1$steps, xlab = "Class of Total Number of Steps Taken Each Day", ylab = "Number of Days", main = "Number of Steps Taken Each Day after Accounting for Missing Values")
+```
+
+We will then calculate the mean and median total number of steps taken per day.
+
+``` {r}
+imput_mean <- mean(totalstepsbyday1$steps)
+imput_median <- median(totalstepsbyday1$steps)
+imput_mean
+imput_median
+```
+
+As we can see, the mean and median total number of steps taken each day is the same, at 10766.19. Since we imputed the missing values with the mean number of steps per interval, this is not surprising. 
+
+## Are there any differences in activity patterns between weekday and weekends? 
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+``` {r}
+data1$date <- as.Date(data1$date)
+library(dplyr)
+data2<-data1%>%
+        mutate(dayType= ifelse(weekdays(data1$date)=="Saturday" | weekdays(data1$date)=="Sunday", "Weekend", "Weekday"))
+head(data2)
+```
+
+2. Make a panel plot containing a time series plot (i.e. 𝚝𝚢𝚙𝚎 = “𝚕”) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+``` {r}
+averagestepbydaytypeandinterval <- data2 %>% group_by(dayType, interval) %>% summarize(averagestepsperday = sum(steps))
+head(averagestepbydaytypeandinterval)
+```
+
+```{r}
+library(lattice)
+with(averagestepbydaytypeandinterval, xyplot(averagestepsperday ~ interval | dayType, type = "l", main = "Total Number of Steps within Intervals by Day Type", xlab = "Daily Intervals", ylab = "Average Number of Steps"))
+```
+
